--- a/src/Pages/employee-dashboard/employee-dashboard.component.css
+++ b/src/Pages/employee-dashboard/employee-dashboard.component.css
@@ -31,3 +31,9 @@ table tr.mat-row:hover {
 .dashboad h3 {
     padding-left: 24px;
 }
+.dashboad {
+  display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
